<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText_billAmount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:text="12.45" android:gravity="end" tools:targetApi="o"/>
    <TextView
            android:text="@string/bill_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="24sp" android:labelFor="@id/editText_billAmount"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/editText_billAmount"
            app:layout_constraintBottom_toBottomOf="@+id/editText_billAmount"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editText_billAmount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:id="@+id/radioGroup_tipPercentage"
            android:checkedButton="@+id/radioButton_10Percent">
        <RadioButton
                android:text="@string/_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_10Percent" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_15Percent" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_20Percent" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton_25Percent" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/tip_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/radioGroup_tipPercentage" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView" android:labelFor="@id/radioGroup_tipPercentage"/>
    <TextView
            android:text="@string/tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_tipPercentage"
            app:layout_constraintStart_toStartOf="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_tipAmount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="@+id/textView2" android:textSize="24sp"
            tools:text="Tip"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:textSize="24sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_total"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="24sp" tools:text="Total"/>
</androidx.constraintlayout.widget.ConstraintLayout>